<resources>
    <string name="app_name">Hiking app</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="app_AdMob_ID" translatable="false">ca-app-pub-7116065396840964~8294316708</string>
    <string name="book_Ad_ID" translatable="false">ca-app-pub-7116065396840964/6822642303</string>
    <string name="list_Ad_ID" translatable="false">ca-app-pub-7116065396840964/6822642303</string>
    <string name="timer_Ad_ID" translatable="false">ca-app-pub-7116065396840964/6822642303</string>
    <string name="directory">Directory</string>
    <string name="item_list">Items List</string>
    <string name="compass">Compass</string>
    <string name="timer">Timer</string>
    <string name="flash_light" translatable="false">Flash Light</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="instagram">Our Instagram</string>
    <string name="rate">Rate Us</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="up_text">Items List:</string>
    <string name="one" translatable="false">1.</string>
    <string name="two" translatable="false">2.</string>
    <string name="third" translatable="false">3.</string>
    <string name="four" translatable="false">4.</string>
    <string name="five" translatable="false">5.</string>
    <string name="save_btn">Save</string>
    <string name="toast_string">List saved!</string>
    <string name="example_knife">Example(Knife)</string>
    <string name="time" translatable="false">00:00:00</string>
    <string name="title3">Camping in the woods</string>
    <string name="title1">Explore your route</string>
    <string name="title5">How to get dressed in a hike</string>
    <string name="title2">How to make a fire</string>
    <string name="title9">How to set up a tent</string>
    <string name="title8">How to stop bleeding</string>
    <string name="title4">Determine the time before sunset</string>
    <string name="title6">Wild animals</string>
    <string name="title7">Poisonous mushrooms</string>
    <string-array name="system">
        <item>@string/title3</item>
        <item>@string/title1</item>
        <item>@string/title5</item>
        <item>@string/title2</item>
        <item>@string/title9</item>
        <item>@string/title8</item>
        <item>@string/title4</item>
        <item>@string/title6</item>
        <item>@string/title7</item>
    </string-array>
    <string name="info">Before going, be sure to find out as much details as possible about the upcoming terrain. Read directories, study maps, find reports from previous travelers. Particular attention should be paid to the weather, local animals and the availability of water sources.</string>
    <string name="text1">\tMany tourists, especially those who have already gone hiking several times, feel extremely confident in their abilities and do not worry too much about the details of the upcoming route. They question their hands dismissively and answer all the questions that “we will deal with them”. But in vain, because sometimes there are situations when such confidence brings trouble.</string>
    <string name="text2">\tThe ability to make fire is extremely important in the wild, especially when it is necessary to warm up or cook food in the winter. But it happens that the matches are damp, run out, forgotten, lost, like a lighter, and there is no gas burner with them. How to make fire without matches and lighters in the woods? This can be found further. This is the most time-consuming process of making fire. He is to obtain fire by friction with the rod and the base. The rod needs to create circular movements on the base, which serves as a wooden plate. With these actions, coals should be formed that trigger the appearance of the flame. Subsequently, the embers can be used to ignite the materials-kindlers. In this method, you need to use only dry wood. Both the core and the plank need to choose the right wood: the best sorts of wood for this are the following: walnut, cypress, pine, aspen, willow, cedar. A small depression is made on the surface of the plank. The rod is about 60 cm long, sharpened so that its tip fits well into the recess. Then you need to press on the plank and start to rotate the rod around the axis with quick movements until the embers start to form. After they are formed, they need to be quickly transferred to the nest of their dry material, called tinder. Another way to light a fire with friction is with a bow. Unlike manual friction, this method is faster to achieve a spark, since it achieves a higher rotational speed and ideal pressure. In this case, in addition to the plank with the rod, you will need a bow and weighting agent. Onions are made by yourself: you need to take a flexible branch with a human hand and string or a string for a bowstring. The wooden rod is placed in the string and begins to unwind by the forward movements of the bow. When embers appear, a tinder is added to them, you can inflate the embers a little until a fire appears. If there is a first aid kit and elementary chemical skills, you can make fire in the forest with the help of chemicals. For ignition will need:
Potassium permanganate and sugar: you need to pour them alternately on cotton, then rub with a stick until a spark appears.
Calcium or sodium chlorate with sugar in a ratio of 3 to 1.
Calcium permanganate and glycerin
Potassium permanganate with any antifreeze.</string>
    <string name="text3">\tThe forest can be very dangerous - if you take the hike with neglect. The skills of survival in such terrain, professionals have been refining for years. But the novice needs to know certain rules of conduct, otherwise the usual trip to the forest may end in tragic.
It is especially important to know this summer, when many people are eager to rest from the city for a few days in solitary confinement. Unfortunately, only some of them relate to the campaign with attention. Today we will tell you what you need to know before going to the forest.
The first point is to correctly collect a backpack. Have a spare set of comfortable clothes, a sleeping bag and, if it is meant to stay in the forest for two or three days, a tent. Must be matches, an ax, a compass, a knife and a lantern. This will be enough for you to get out of virtually any freelance situation.
Are you counting on a long single trip? Do not do it at random and do not leave friends and family in the dark. The forest is a very unpredictable place. Make a travel plan, mark up parking lots and estimate the approximate time that you have to take a hike. Leave a duplicate plan for friends. This precaution can, in the last resort, really save your life.
If you suddenly realized that you have to stay in the woods at night, although it was planned to get to civilization, do not delay the inevitable. Even if the yard is hot noon - start getting ready for the night. Believe me, there is a lot of time for this, but doing all the work under the dark satin of the dark forest is still a pleasure.
To begin with, in the forest, it is worth taking care of the shelter. The tent, if any, must be installed first. If not, build the shelter yourself. It is better to do it with a ready-made basis; large boulders, rocks or living trees will fit, from which you can already make a canopy and walls. As cover of a floor it is possible to take leaves, dry grass and pine branches, a lodge should necessarily be lifted above the ground.
It is unlikely that a sufficient supply of water for a long-term campaign will take with you.</string>
    <string name="text4">\tIt is useful to know how much time is left until the moment when the sun disappears over the horizon and begins to darken. It does not matter if you are on a hike or just relaxing somewhere in nature, it is advisable to prepare in advance for the night. Fortunately, there is a very simple way to determine the time before sunset, and for this you only need your hand.  So, all that needs to be done is to stretch out your hand so that the sun is like lying on your index finger. Now count the number of fingers to the horizon. If you have a more or less standard finger thickness, then each finger will be about 15 minutes before sunset.  Those who are lucky enough to be the owner of the fingers of a completely non-standard size can be advised to conduct an experiment once, noticing the time necessary for the sun to drop 1 finger down.</string>
    <string name="text5">\tThe type of clothing for hiking depends largely on the conditions in which your trip will take place. You will need significantly less clothes for a short summer hike than for a long winter one. However, despite the specifics, in any case, you need to wear clothes that drain your body moisture and prevent its accumulation. You must wear base, insulation and outer layers of clothing. Avoid heavy clothing base layer, if your trip is planned in warm weather. Thermal underwear is appropriate for cool weather, but does not make sense to go to the forest in mid-summer. For cool weather, wear thermal underwear of the correct thickness. The layered clothing happens three types: easy, average and for extreme conditions. The colder the weather and the longer the trip, the denser your thermal underwear should be. Avoid cotton. Cotton absorbs moisture, which will make your clothes wet, uncomfortable, and can cause a cold if you start to sweat. Look for tissues that drain moisture from the body. Merino wool and silk can cope with the task, but synthetic fabrics specially invented for this purpose are best. Look for sportswear indicating on her ability to drain moisture. In warm or slightly cool weather, lean towards a simple windbreaker. Windbreaker will avoid colds on a windy day, but will not provide you with special thermal insulation in more extreme conditions. Do not forget to wear a layer of insulating clothing for hiking in cold weather. Even if your base and middle layers of clothing provide good insulation, outerwear should also provide you with additional warmth. Invest in advanced options. Hoods, pockets, valves, no doubt, useful, but increase the price of jackets. However, if you are seriously planning to go hiking, you should invest in a jacket with a hood, lots of pockets and vent valves with zippers, which will allow you to adjust the temperature.</string>
    <string name="text6">\tNature is the habitat of many species of wild animals and birds. Of course in the tourist areas all the animals fled and hid where anyone. But there, where people rarely walked, or in places remote from civilization, you can meet a lot of people. Elk, maral, bear, snow leopard (irbis), lynx, cat-manul, roe deer and even reindeer can be found in such campaigns. Of course, this is not a complete list, only about 90 species of mammals, 260 species of birds, and a couple of dozen of all creeping and floating animals. As you understand, there are several species that pose a danger to humans, although in reality this person is a real danger to animals. To save the nerves and psyche of poor animals, we will tell you how to behave when meeting with them. Let\'s be aware of your presence in advance, do not sneak around the forest; Do not approach wounded animals; Under no circumstances try to stroke a cute fluffy animal, the bite of a squirrel or a chipmunk is not only painful, but you can also pick up some infection. Do not catch wild animals; Remember you are visiting. Behave yourself and respectfully to the owners of the house!</string>
</resources>