<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.my.admin.tourist.ItemList">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/text1"
        android:layout_marginTop="48dp"
        android:text="@string/up_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="121dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/text1"
        android:ems="10"
        android:hint="@string/example_knife"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_toStartOf="@+id/editText5"
        android:text="@string/one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_toEndOf="@+id/text2"
        android:ems="10"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText2"
        android:layout_toStartOf="@+id/editText"
        android:text="@string/two"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText3"
        android:inputType="textCapSentences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text3"
        android:layout_toEndOf="@+id/text3"
        android:ems="10" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="20dp"
        android:text="@string/third"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText4"
        android:inputType="textCapSentences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text4"
        android:layout_toEndOf="@+id/text4"
        android:ems="10" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="20dp"
        android:text="@string/four"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText5"
        android:inputType="textCapSentences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text5"
        android:layout_toEndOf="@+id/text5"
        android:ems="10" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/five"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_red_border"
        android:text="@string/save_btn"
        android:textColor="@color/buttonColor" />

</RelativeLayout>
